<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/feedback_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="64sp"
        tools:text="🏆" />
    <TextView
        android:id="@+id/well_done_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:text="@string/well_done"
        android:layout_below="@id/feedback_emoji"
        android:textColor="@color/golden_light"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/your_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/well_done_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/your_score"
        android:textColor="@color/pearl_white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_score_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/golden_light"
        android:textSize="60sp"
        tools:text="2 / 3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/score_text"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/next_level_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Next Level"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_background"
            android:text="@string/play_again"
            android:textColor="@color/midnight_blue"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>