<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="64dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/title_lineman_quest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-black"
            android:text="@string/title_lineman_quest"
            android:textColor="@color/electric_cyan"
            android:textSize="36sp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"/>

        <TextView
            android:id="@+id/subtitle_climb_ladder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/subtitle_climb_ladder"
            android:textColor="@color/pearl_white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="60dp"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ladder_image"
                android:layout_width="200dp"
                android:layout_height="2000dp"
                android:src="@drawable/ladder_vector"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/ladder_image_desc" />

            <ImageView
                android:id="@+id/lineman_character"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:src="@drawable/lineman_character"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                android:contentDescription="@string/lineman_character_desc" />

            <TextView
                android:id="@+id/level_1_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.955" />

            <TextView
                android:id="@+id/level_2_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.905" />

            <TextView
                android:id="@+id/level_3_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.855" />

            <TextView
                android:id="@+id/level_4_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="4"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.805" />

            <TextView
                android:id="@+id/level_5_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="5"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.755" />

            <TextView
                android:id="@+id/level_6_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="6"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.705" />

            <TextView
                android:id="@+id/level_7_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="7"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.655" />

            <TextView
                android:id="@+id/level_8_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="8"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605" />

            <TextView
                android:id="@+id/level_9_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="9"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555" />

            <TextView
                android:id="@+id/level_10_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.505" />

            <TextView
                android:id="@+id/level_11_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="11"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.455" />

            <TextView
                android:id="@+id/level_12_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="12"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.405" />

            <TextView
                android:id="@+id/level_13_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="13"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.355" />

            <TextView
                android:id="@+id/level_14_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/level_marker_background"
                android:gravity="center"
                android:text="14"
                android:textColor="@color/midnight_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ladder_image"
                app:layout_constraintEnd_toEndOf="@id/ladder_image"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/ladder_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.305" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/footer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/footer_text"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>